--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <!--main css-->
         <link rel="stylesheet" href="style/home.css">
         <!--responsive  -->
-        <!-- <link rel="stylesheet" href="style/phone.css">
+
+        <!--     <link rel="stylesheet" href="style/phone.css"> -->
 
 
 
