--- a/index.html
+++ b/index.html
@@ -2499,11 +2499,10 @@
         <section>
           <h2 class="titre-section-geise-3">Remerciements</h2>
                     <div class="row">
-                      <p class="section-blanche2">Je tiens à remercier les personnes suivantes qui ont contribuées au bon déroulement de mon stage. <br>
-                        Tout d’abord Monsieur Meriaudeau Fabrice et Tahri Omar, pour avoir encadré mon stage tout en me considérant comme une personne autonome ainsi que pour leurs confiances et leurs conseils avisés. <br>
-                        En dernier temps, je remercie l’équipe VIBOT du laboratoire IMVIA et L’IUT du Creusot pour le matériel et les salles qu’ils m’ont fournies afin de pouvoir réussir mon stage. <br><br>
-                        Salhi Elmootez Belleh.<br><br>
-                        </p>
+                      <p class="section-blanche2"Je tiens à remercier les personnes suivantes qui ont contribué au bon déroulement de mon stage.
+Tout d’abord messieurs Meriaudeau Fabrice et Tahri Omar, pour avoir encadré mon stage tout en me considérant comme une personne autonome ainsi que pour leur confiance et leurs conseils avisés.
+En dernier temps, je remercie l’équipe VIBOT du laboratoire IMVIA et L’IUT du Creusot pour le matériel et les salles qu’ils m’ont fournis afin de pouvoir réussir mon stage.
+ <br><br>Salhi Elmootez Belleh.<br><br> </p>
 
         </section>
         <div class="barre-horizontale">
