--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
                             <div class="publicite">
                                 <img class="universite-logo" src="images/Université_de_Bourgogne_Logo.svg.png" alt="">
                                 <img class="imvia-logo" src="images/logo-imvia-removebg-preview.png" alt="">                               
-                                <img class="cerema-logo" src="images/cerema-removebg-preview.png" alt="">
                             </div>
 
                 </header>     
@@ -2499,10 +2498,11 @@
         <section>
           <h2 class="titre-section-geise-3">Remerciements</h2>
                     <div class="row">
-                      <p class="section-blanche2"> Je tiens à remercier les personnes suivantes qui ont contribué au bon déroulement de mon stage.
-Tout d’abord messieurs Meriaudeau Fabrice et Tahri Omar, pour avoir encadré mon stage tout en me considérant comme une personne autonome ainsi que pour leur confiance et leurs conseils avisés.
-En dernier temps, je remercie l’équipe VIBOT du laboratoire IMVIA et L’IUT du Creusot pour le matériel et les salles qu’ils m’ont fournis afin de pouvoir réussir mon stage.
- <br><br>Salhi Elmootez Belleh.<br><br> </p>
+                      <p class="section-blanche2">Je tiens à remercier les personnes suivantes qui ont contribué au bon déroulement de mon stage. <br><br>
+                        Tout d’abord messieurs Meriaudeau Fabrice et Tahri Omar, pour avoir encadré mon stage tout en me considérant comme une personne autonome ainsi que pour leur confiance et leurs conseils avisés.
+                        En dernier temps, je remercie l’équipe VIBOT du laboratoire IMVIA et L’IUT du Creusot pour le matériel et les salles qu’ils m’ont fournis afin de pouvoir réussir mon stage.<br><br>
+                        Salhi Elmootez Belleh.<br><br>
+                        </p>
 
         </section>
         <div class="barre-horizontale">
@@ -2514,7 +2514,6 @@ En dernier temps, je remercie l’équipe VIBOT du laboratoire IMVIA et L’IUT 
                   <img class="universite-logo-2" src="images/Université_de_Bourgogne_Logo.svg.png" alt="">
                   <img class="imvia-logo-2" src="images/logo-imvia-removebg-preview.png" alt="">
                   <img class="vibot-logo-2" src="images/696297.png" alt="">                               
-                  <img class="cerema-logo-2" src="images/cerema-removebg-preview.png" alt="">
                   
               </div>
               <p class="par-finish">VIBOT EMR CNRS 6000, Université Bourgogne Franche Comté / ImViA</p>
